# xindata-test-task

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
scripts/: code-quality-check.sh
src/: cache.py  database.py  llm.py  llm_handler.py  logger.py  main.py  settings.py  utils.py
src/prompts/: get_explanation.py  get_query.py
