[tool.poetry]
name = "xindata-test-task"
version = "0.1.0"
description = ""
authors = ["Nikita Kotov <nik-kotov-98@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.6"
ollama = "^0.4.9"
typer = "^0.16.0"
pyyaml = "^6.0.2"
openai = "^1.82.1"
tabulate = "^0.9.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"


[tool.poetry.group.linters.dependencies]
black = "^25.1.0"
ruff = "^0.11.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
